# awesome

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
src/awesome/: __init__.py  awesome.py
tests/: test_classifier.py
