[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]

[project]
authors = [
  {email = "janphilip@gopfert.eu", name = "Jan Philip Göpfert"}
]
dependencies = [
  "scikit-learn>=1.3.2"
]
description = "Implementation of an awesome algorithm"
license = {file = "LICENSE"}
name = "awesome"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pip-tools>=6.12.2",
  "pre-commit>=2.20.0",
  "pytest>=7.2.0"
]

[tool.isort]
profile = "black"
